test/src/e2e_vm_tests/test_programs/should_fail/dependency_not_at_beginning/src/main.sw
script;
// This tests importing other files.

use foo::Foo;

fn main() -> bool {
  let foo = Foo {
    foo: "foo",
  };

  false
}

mod a_dependency;

